...
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textSize="@dimen/size_crayon"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stylo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_overtexte"
            android:layout_marginTop="-4dp"
            android:maxLength="1"
            android:padding="3dp"
            android:textAlignment="center"
            android:textColor="@color/block_number"
            android:textSize="@dimen/size_stylo"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/crayon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stylo"
            android:layout_marginTop="-14dp"
            android:textColor="@color/block_crayon"
            android:textSize="@dimen/size_crayon" />
...
